# pulsar-relay

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
config/: default.toml  test.toml
data/tasks/test-plans/: test-plan-echo.md  test-plan-research.md  test-plan-with-failure.md
deploy/: pulsar-relay.service
prompts/: prep-execution.md  prep-research.md
src/: agent.rs  checksum.rs  config.rs  ingest.rs  main.rs  scheduler.rs  task_parser.rs  telegram.rs  tracker.rs
src/kafka/: consumer.rs  producer.rs
tests/: kafka_integration.rs  scheduler_integration.rs
tests/fixtures/: mock-pipeline-executor.sh  mock-spawn-agent.sh  task_test_echo_pipeline.md  task_test_failure_handling.md
