[package]
name = "pulsar-relay"
version = "0.1.0"
edition = "2021"
description = "Sequential task scheduler for AI Task Automation pipeline"

[features]
default = []
kafka = ["rdkafka", "tokio-stream"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
fs2 = "0.4"
anyhow = "1"
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
